# competitive-analysis-system

./: .env.example  .gitignore  AGENTS.md  DEVELOPMENT_PLAN.md  README.md  phase1-2-teaching-annotations_2026-06-20.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
phase_report/: phase3-audit_2026-06-21.md  phase3-implementation-summary_2026-06-21.md  phase3-implementation-summary_2026-06-22.md  phase4-4.5-implementation-summary_2026-06-22.md  phase4-annotation-audit_2026-06-22.md  phase4-audit_2026-06-22.md  phase4-implementation-summary_2026-06-22.md  phase4.5-implementation-summary_2026-06-22.md
src/: __init__.py  config.py
src/agents/: __init__.py  analyzer.py  collector.py  quality.py  writer.py
src/agents/prompts/: analyzer.md  collector.md  quality.md  writer.md
src/db/: __init__.py  connection.py  dao.py  schema.sql
src/harness/: __init__.py  audit.py  guard.py
src/mcp/: __init__.py  server.py  tools_rag.py  tools_web.py
src/memory/: __init__.py  conflict.py  forgetting.py  long_term.py  retrieval.py  summarizer.py
src/pipeline/: __init__.py  checkpoint.py  graph.py  state.py
src/supervisor/: __init__.py  a2a.py  router.py  state.py  supervisor.py
